if HAVE_GTK2
GTKGNHASTDIR = gtk-gnhast
GTKINSTDIR = gtk-insteonedit
endif

SUBDIRS = libconfuse \
	gnhastd \
	fakecoll \
	owsrvcoll \
	rrdcoll \
	brulcoll \
	insteoncoll \
	wmr918coll \
	wupwscoll \
	ad2usbcoll \
	icaddycoll \
	venstarcoll \
	moncoll \
	jsoncgicoll \
	tools \
	data \
	handlers $(GTKGNHASTDIR) $(GTKINSTDIR)

