if HAVE_GTK2
GTKGNHASTDIR = gtk-gnhast
GTKINSTDIR = gtk-insteonedit
endif

SUBDIRS = libconfuse \
	gnhastd \
	fakecoll \
	owsrvcoll \
	rrdcoll \
	brulcoll \
	insteoncoll \
	wmr918coll \
	wupwscoll \
	ad2usbcoll \
	icaddycoll \
	venstarcoll \
	moncoll \
	jsoncgicoll \
	urtsicoll \
	astrocoll \
	tools \
	data \
	gnhastweb \
	handlers $(GTKGNHASTDIR) $(GTKINSTDIR)

