
iconsdir = $(datarootdir)/gnhast/pixmaps
dist_icons_DATA = alarmstatus.png \
	amps.png \
	battery.png \
	co-2.png \
	counter.png \
	dir.png \
	distance.png \
	flowrate.png \
	gnhast-icon-16.png \
	gnhast-icon-32.png \
	gnhast-icon-48.png \
	gnhast-logo.png \
	gnhast.png \
	graph.png \
	group.png \
	hub.png \
	humid.png \
	lux.png \
	moisture.png \
	number.png \
	outlet.png \
	percent.png \
	pressure.png \
	rainrate.png \
	smnumber.png \
	speed.png \
	switch.png \
	temp.png \
	thmode.png \
	thstate.png \
	timer.png \
	voltage.png \
	volume.png \
	watt.png \
	wattsec.png \
	weather.png \
	wetness.png
